update leaderboard URL

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -7,7 +7,7 @@ contact_links:
   url: https://github.com/SyneRBI/PETRIC/wiki
   about: Participation details
 - name: Leaderboard
-  url: https://tomography.stfc.ac.uk
+  url: https://tomography.stfc.ac.uk/leaderboard
   about: Current rankings
 - name: Discord
   url: https://discord.gg/Ayd72Aa4ry
