docker: edge image

--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -8,7 +8,7 @@ jobs:
   check:
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/synerbi/sirf:latest
+      image: ghcr.io/synerbi/sirf:edge
       options: --user root  # https://github.com/actions/checkout/issues/956
     steps:
     - uses: actions/checkout@v4
