--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -22,7 +22,7 @@ jobs:
           xargs -a apt.txt sudo apt-get install -y
         fi
         if test -f environment.yml; then
-          conda install --file environment.yml
+          conda env update --file local.yml
         fi
         if test -f requirements.txt; then
           pip install -r requirements.txt
