git ignore some more output files

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 data/
 orgdata/
+orgdata
 output/
 tmp*/
 err*.txt
@@ -13,3 +14,6 @@ __pycache__/
 *.ahv
 *.hv
 *.v
+*.csv
+# Tensorboard files
+events.*
