--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -33,14 +33,23 @@ jobs:
       shell: bash -el {0}
       run: |
         source /opt/SIRF-SuperBuild/INSTALL/bin/env_sirf.sh
+        dataset=Siemens_mMR_NEMA_IQ
+        curl -sfSL -o  ${dataset}.zip https://petric.tomography.stfc.ac.uk/data/${dataset}.zip
+        mkdir -p data; cd data; unzip -u ../${dataset}.zip; cd ..
         curl -fsSL https://raw.githubusercontent.com/SyneRBI/PETRIC/main/petric.py > petric.py
         test -f main.py || ln -s main_ISTA.py main.py
         python <<EOF
+        import petric
         from main import Submission, submission_callbacks
         from cil.optimisation.algorithms import Algorithm
         assert issubclass(Submission, Algorithm)
         assert isinstance(submission_callbacks, list)
         assert all(callable(callback) for callback in submission_callbacks)
+        srcdir, outdir, metrics = petric.data_dirs_metrics[0]
+        data = petric.get_data(srcdir)
+        assert data.OSEM_image.max() > 0
+        assert data.reference_image.max() > 0
+        assert data.FOV_mask.max() > 0
         EOF
   full:
     if: startsWith(github.ref, 'refs/tags')
